--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -163,6 +163,8 @@ html {
 
 * {
   font-family: "Roboto", sans-serif;
+  -webkit-font-smoothing: subpixel-antialiased !important;
+  text-rendering: optimizeLegibility !important;
 }
 
 h1 {
@@ -521,6 +523,12 @@ html #header .header-btn-collapse-nav {
   }
 }
 
+@media (max-width: 599px) {
+  .mf__features__feature {
+    padding-left: 0;
+  }
+}
+
 .mf__features__feature:last-of-type {
   padding-right: 0;
 }
@@ -553,7 +561,6 @@ html #header .header-btn-collapse-nav {
   line-height: 1.6;
   color: #4d5877;
   font-size: 2.4rem;
-  font-weight: 600;
 }
 
 .mf__features__feature__heading + .mf__features__feature__copy {
