Font size and background colour adjustments

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -39,6 +39,7 @@ $footer: 'footer' !default;
 
 :root {
     --black: #{ $black };
+    --black--rgb: #{ hex-to-rgb( $black ) };
     --purple: #{ $purple };
     --purple--rgb: #{ hex-to-rgb( $purple ) };
 	--maroon: #{ $maroon };
