--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -222,8 +222,8 @@ p {
 }
 
 html.sticky-header-active #header .header-body {
-  background-color: rgb(77, 88, 119) !important;
-  background-color: rgba(77, 88, 119, 0.8) !important;
+  background-color: rgb(0, 0, 0) !important;
+  background-color: rgba(0, 0, 0, 0.7) !important;
 }
 
 html #header .header-body {
@@ -488,7 +488,7 @@ html #header .header-btn-collapse-nav {
 }
 
 .mf__features__h2 {
-  font-size: 2.2rem;
+  font-size: 2.4rem;
   margin-bottom: 1rem;
 }
 
@@ -560,7 +560,7 @@ html #header .header-btn-collapse-nav {
 .mf__features__feature__heading {
   line-height: 1.6;
   color: #4d5877;
-  font-size: 2.4rem;
+  font-size: 2rem;
 }
 
 .mf__features__feature__heading + .mf__features__feature__copy {
@@ -583,7 +583,7 @@ html #header .header-btn-collapse-nav {
 }
 
 .mf__register__buttons {
-  background-color: #4d5877;
+  background-color: #000000;
   color: #ffffff;
 }
 
