--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -229,6 +229,7 @@ html.sticky-header-active #header .header-body {
 html #header .header-body {
   background-color: rgb(255, 255, 255) !important;
   background-color: rgba(255, 255, 255, 0.8) !important;
+  transition: all 200ms ease-in-out;
 }
 
 html #header .header-container {
