--- a/resources/sass/frontend.scss
+++ b/resources/sass/frontend.scss
@@ -19,7 +19,7 @@ h6 {
         $line-height: 1.3
     );
 
-    color: var(--purple);
+    color: var(--black);
     font-family: $font-family-jomolhari;
     font-weight: 700;
     text-transform: initial;
@@ -33,14 +33,14 @@ p {
 }
 
 #{$html} {    
-    &.sticky-header-active #header .header-body {
+    /* &.sticky-header-active #header .header-body {
         @include background-color-rgba( var(--black--rgb), 0.7 );
-    }
+    } */
 
     #{$header} {
         .header-body {
-            @include background-color-rgba( var(--white--rgb), 0.8 );
-            @include transition;
+            @include background-color-rgba( var(--black--rgb), 0.8 );
+            // @include transition;
         }
 
         .header-container {
@@ -57,16 +57,16 @@ p {
             padding: 0;
         }
 
-        // .header-nav-main {
-        //     @include background-color-rgba( var(--white--rgb), 0.8 );
-        // }
+        /* .header-nav-main {
+            @include background-color-rgba( var(--white--rgb), 0.8 );
+        } */
 
         .header-btn-collapse-nav {
             @include line-height(
                 $line-height: .95
             );
 
-            background: var(--purple);
+            background: var(--black);
             font-size: 2.5rem;
             padding: $padding/2 $padding;
         }
@@ -112,12 +112,12 @@ p {
             }
 
             @include button-styles(
-                $color: var(--purple) !important
+                $color: var(--white) !important
             );
             @include button-hover(
-                $background-color: rgba( var(--purple--rgb), .9 ) !important,
+                $background-color: rgba( var(--white--rgb), .9 ) !important,
                 // $border-color: var(--white) !important,
-                $color: var(--white) !important,
+                $color: var(--black) !important,
             );
 
             display: block;
@@ -129,18 +129,18 @@ p {
 
                 text-decoration: none;
 
-                .sticky-header-active & {
+                /* .sticky-header-active & {
                     background-color: rgba( var(--white--rgb), .8 ) !important;
-                    color: var(--purple) !important;
-                }
+                    color: var(--black) !important;
+                } */
             }
 
-            .sticky-header-active & {
+            /* .sticky-header-active & {
                 color: var(--white) !important;
-            }
+            } */
 
             &.active {
-                background-color: var(--purple) !important;
+                background-color: var(--black) !important;
                 color: var(--white) !important;
             }
         }
@@ -155,7 +155,7 @@ p {
         @include ratio( logo );
         @include transition;
         
-        background: url( '/frontend/template/assets/img/MF-Homecare-Logo.png' ) no-repeat center center;
+        background: url( '/frontend/template/assets/img/MF-Homecare-Logo-white.png' ) no-repeat center center;
         background-size: contain;
         display: block;
         width: 350px;
@@ -168,9 +168,9 @@ p {
             width: 225px;
         }
 
-        .sticky-header-active & {
+        /* .sticky-header-active & {
             background-image: url( '/frontend/template/assets/img/MF-Homecare-Logo-white.png?hgfghj' );
-        }
+        } */
     }
 
     /* &#{$es}logo {
@@ -203,15 +203,15 @@ p {
 
         &#{$es}heading-3 {
             @include button-styles(
-                $background-color: rgba( var(--purple--rgb), .9 ) !important,
+                $background-color: rgba( var(--black--rgb), .9 ) !important,
                 // $border-color: var(--white) !important,
                 $color: var(--white) !important,
                 $padding: $padding $padding*2,
             );
             @include button-hover(
                 $background-color: var(--white) !important,
-                // $border-color: var(--purple) !important,
-                $color: var(--purple) !important,
+                // $border-color: var(--black) !important,
+                $color: var(--black) !important,
             );
 
             font-family: $font-family-jomolhari;
@@ -328,7 +328,7 @@ p {
                     $line-height: 1.6
                 );
 
-                color: $purple;
+                color: $black;
                 font-size: 2.0rem;
             }
 
@@ -406,13 +406,13 @@ p {
         &#{$es}button {
             @include button-styles(
                 $background-color: var(--white),
-                $color: var(--purple),
+                $color: var(--black),
                 $font-size: 1.8rem
             );
             @include button-hover(
-                $background-color: var(--black),
+                $background-color: rgba( var(--white--rgb), .5 ),
                 // $border-color: var(--white),
-                $color: var(--white)
+                // $color: var(--black)
             );
             @include transition;
 
@@ -458,9 +458,9 @@ p {
                 text-align: center;
             }
 
-            &:first-child {
-                // justify-content: flex-start;
-            }
+            /* &:first-child {
+                justify-content: flex-start;
+            } */
             
             &:last-child {
                 // justify-content: flex-end;
